Fix layout bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,4 +9,5 @@ body,
 	max-width: 100vh;
 	max-height: 100vh;
 	overflow: hidden;
+	margin: 0 auto;
 }
